cast study styling

--- a/casestudy-dashboard.html
+++ b/casestudy-dashboard.html
@@ -65,6 +65,32 @@
                 <p>
                     Netpulse is the #1 mobile SaaS company in the <span class="red">fitness industry</span>, providing <span class="red">white labeled apps</span> to hundreds of brands around the world. From 24 Hour Fitness to your neighborhood's mom-and-pop facility, Netpulse creates effective B2B2C solutions to make the sometimes scary world of fitness a little more approachable for meatheads and newbies alike.
                 </p>
+                <div class="inline-link blue">My Role at Netpulse</div>
+                <div class="inline-link-active blue">My Role at Netpulse</div>
+                <div class="collapsed-text">
+                    <p>
+                        As a <span class="red">Lead Product Designer</span> I worked directly with our PMs, engineers, clients, and end users. Because the product team averaged around 5 – 6 team members, I had the opportunity to take the lead on every aspect of multiple projects from discovery to implementation. These projects included both mobile and web solutions.
+                    </p>
+                    <p>
+                        I also created and documented the (previously non-existent) product design process with our other internal PD. Here are a few of the major initiatives we implemented:
+                    </p>
+                    <strong class="green">User testing</strong>
+                    <p>
+                         Client research sessions, monthly end-user testing
+                    </p>
+                    <strong class="green">Critique cadence</strong>
+                    <p>
+                         Daily PM/PD crits, Weekly PD crits, Weekly Design Team crits, Monthly designer off-sites
+                    </p>
+                    <strong class="green">App Unification Library</strong>
+                    <p>
+                         Alignment within existing app, Craft library for designers, elements for efficient implementation
+                    </p>
+                    <strong class="green">Better design integration into the engineering sprints</strong>
+                    <p>
+                        Zeplin organization, Design reviews, Design QA, Design task management
+                    </p>
+                </div>
                 <strong class="green large" id="p-title">The Mobile Product</strong>
                 <p>
                     The Netpulse mobile platform is white-labeled for 600+ gyms. While large enterprises such as 24 Hour Fitness, Equinox, and Planet Fitness have more customized apps, the majority of clients use our base platform that was acquired from Club Apps in 2014. <span class="red">The launching point for this app is the dashboard</span>, it’s the hub of the experience for the end user.
@@ -100,6 +126,9 @@
                 </ul>
                 <div class="ft-image">
                     <img src="images/ft-research1.png" />
+                    <div class="caption">
+                        I listed out all existing features and the main actions that take place within them. They were organized into tile vs side menu features and color coded by action type (settings, primary actions, live info, reference, and outliers).
+                    </div>
                 </div>
                 <strong class="green large" id="p-title">Analytic Study</strong>
                 <p>“How do our users interact with the features?”</p>
@@ -108,6 +137,12 @@
                     <li>No movement between features</li>
                     <li>Top used features = Find a Class, Check-in, Record a Workout</li>
                 </ul>
+                <div class="ft-image">
+                    <img src="images/ft-analytics.png" />
+                    <div class="caption">
+                        Google Analytics revealed that there is a major drop off after Check-in and after every time the user hits the dashboard inbetween features.
+                    </div>
+                </div>
             </div>
         </section>
         <section class="intro" id="design">
@@ -120,6 +155,21 @@
                     <li class="indent">Hierarchy among most used features</li>
                     <li>Create a platform for more intelligent data & connection between features</li>
                 </ul>
+
+                <div class="two-images">
+                    <div class="ft-image">
+                        <img src="images/dash-design1.png">
+                        <img src="images/dash-design2.png" id="margin-top">
+                    </div>
+                    <div class="side-image large">
+                        <img src="images/dash1-0.png" id="large-phone" />
+                    </div>
+                </div>
+                <div class="caption">
+                    A sampling of paper sketches and Sketch mockups created during the ideation phase.
+                </div>
+
+
                 <strong class="green large" id="p-title">Scaling Back</strong>
                 <p>
                     In collaboration with the other Product Designer, we decided to move forward to testing a design with tabbed dashboard & personalized side menu based on ability to solve our three goals in 2-3 sprints.
@@ -131,18 +181,33 @@
                     <li>Smaller opaque tiles allow for club’s brand to shine through </li>
                     <li>Profile photo + updated side menu provide a more personalized experience  to the user</li>
                 </ul>
+
+
+                <div class="ft-image">
+                    <img src="images/dash-design3.png" />
+                    <div class="caption">
+                        Final design for testing including tab bar navigation, featured tiles, profile photo, opaque tiles, and updated side menu.
+                    </div>
+                </div>
             </div>
         </section>
          <section class="intro" id="testing">
             <h2 class="blue shadow">Testing</h2>
             <div class="body-copy">
                 <strong class="green large" id="p-title">User Testing Structure</strong>
+
+                <div class="side-image">
+                    <img src="images/testing-phone1.png" id="testing-phone1" />
+                    <img src="images/testing-phone2.png" id="testing-phone2" />
+                </div>
+
                 <p>
-                    I created 6 <span class="red">fully-functional, custom-branded prototypes</span>, for 6 of our clients using Invision. We chose a variety of health clubs to test with (from enterprise to SMB) and mapped their existing features to the new two-part dashboard so they would get as realistic of an experience as possible.
+                    I created <span class="red">6 fully-functional, custom-branded prototypes</span>, for 6 of our clients using Invision. We chose a variety of health clubs to test with (from enterprise to SMB) and mapped their existing features to the new two-part dashboard so they would get as realistic of an experience as possible.
                 </p>
                 <p>
                     I ran task based user testing with Club Managers to test the usability of the new navigation as well as get their feedback on their club’s updated branding.
                 </p>
+
                 <strong class="green large" id="p-title">User Testing Results</strong>
                 <ul>
                     <li>Overall <span class="green">positive</span> feedback to UI changes, especially the inclusion of an avatar/profile photo</li>
@@ -189,6 +254,14 @@
                         A “Most Used” tab is introduced to begin giving a personalized experience to  the user
                     </li>
                 </ul>
+
+                <div class="ft-image">
+                    <img src="images/dash-design4.png" />
+                    <div class="caption">
+                        Final design for testing including tab bar navigation, featured tiles, profile photo, opaque tiles, and updated side menu.
+                    </div>
+                </div>
+
                 <strong class="green large" id="p-title">Testing (Again)</strong>
                 <p>
                     I held another round of user testing with the same 6 health clubs and received almost exclusively positive feedback on version 2.1.
