--- a/casestudy-adminportal.html
+++ b/casestudy-adminportal.html
@@ -48,28 +48,130 @@
 
     <section class="case-nav lt-gray-background blue">
         <ul class="case-nav-content" id="adminportal-nav">
+            <li><a href="#" id="nav-item-1-red" class="active">Intro</a></li>
+            <li><a href="#" id="nav-item-2-red">Design Process</a></li>
+            <li><a href="#" id="nav-item-3-red">Final Design</a></li>
+        </ul>
+    </section>
+
+<!--     <section class="case-nav lt-gray-background blue">
+        <ul class="case-nav-content" id="adminportal-nav">
             <li><a href="#intro">Intro</a></li>
             <li><a href="#research">Research</a></li>
             <li><a href="#design">Design</a></li>
             <li><a href="#testing">Testing</a></li>
             <li><a href="#revision">Revision</a></li>
         </ul>
-    </section>
+    </section> -->
 
 <section class="case-study">
     <div class="case-study-content">
-        <div class="intro" id="intro">
+        <section class="intro" id="intro" data-link-id="nav-item-1-red">
             <h2 class="red shadow">Intro</h2>
+                
+                <div class="side-image" id="admin">
+                    <img src="images/logos.png" id="logos" />
+                    <img src="images/dash1-0.png" id="phone" />
+                </div>
+
             <div class="body-copy">
-                <strong class="green large">Dashboard 1.0: The Good</strong>
-                <br>
-                <strong>Current branding capabilities are world-class</strong>
-                Our mobile platform is white-labeled for 600+ gyms. Take a second to imagine the ugliest brand you can think of. Brown on brown? Stripes on plaid? Yeah, it needs to work with that. And we’ve built a platform that can accommodate even the ugliest brand in the blink of an eye. 
-                <br>
-                <strong>We have a wide breadth of features & integrations</strong>
-                With over 30 configurable features, including add-ons, a club can easily customize their experience to fit their member base. With integrations that allow a user to quickly check-in to the club & connect their favorite fitness device, our mobile platform acts as the hub of the health club industry. 
+
+                <strong class="green large" id="p-title">Who is Netpulse?</strong>
+                <p>
+                    Netpulse is the #1 mobile SaaS company in the <span class="red">fitness industry</span>, providing <span class="red">white labeled apps</span> to hundreds of brands around the world. From 24 Hour Fitness to your neighborhood's mom-and-pop facility, Netpulse creates effective B2B2C solutions to make the sometimes scary world of fitness a little more approachable for meatheads and newbies alike.
+                </p>
+                <div class="inline-link blue">My Role at Netpulse</div>
+                <div class="inline-link-active blue">My Role at Netpulse</div>
+                <div class="collapsed-text">
+                    <p>
+                        As a <span class="red">Lead Product Designer</span> I worked directly with our PMs, engineers, clients, and end users. Because the product team averaged around 5 – 6 team members, I had the opportunity to take the lead on every aspect of multiple projects from discovery to implementation. These projects included both mobile and web solutions.
+                    </p>
+                    <p>
+                        I also created and documented the (previously non-existent) product design process with our other internal PD. Here are a few of the major initiatives we implemented:
+                    </p>
+                    <strong class="green">User testing</strong>
+                    <p>
+                         Client research sessions, monthly end-user testing
+                    </p>
+                    <strong class="green">Critique cadence</strong>
+                    <p>
+                         Daily PM/PD crits, Weekly PD crits, Weekly Design Team crits, Monthly designer off-sites
+                    </p>
+                    <strong class="green">App Unification Library</strong>
+                    <p>
+                         Alignment within existing app, Craft library for designers, elements for efficient implementation
+                    </p>
+                    <strong class="green">Better design integration into the engineering sprints</strong>
+                    <p>
+                        Zeplin organization, Design reviews, Design QA, Design task management
+                    </p>
+                </div>
+
+                <strong class="green large" id="p-title">The Feedback Product</strong>
+                <ul>
+                    <li><strong>Mobile:</strong> members rate their experience in the club after each workout</li>
+                    <li><strong>Web:</strong> tickets appear in real-time on the gym manager’s admin portal</li>
+                    <li>4 month pilot with 15 customers</li>
+                </ul>
+
+                <div class="">
+                    <img src="images/portal-1.png" />
+                </div>
+
+                <strong class="green large" id="p-title">Pilot Takeaways</strong>
+                <ul>
+                    <li>Admin can only see a couple tickets at a time</li>
+                    <li>Lack of context for negative reviews</li>
+                    <li>Hard to find highest priority tickets</li>
+                    <li>Timing for ask on user’s side led to complaints in the club</li>
+                    <li>Club managers don’t have a lot of time to spend here</li>
+                </ul>
+
+                <strong class="green large" id="p-title">Design Goals</strong>
+                <ul>
+                    <li><strong>Task 1:</strong> Make it easier for admin to scan through large quantities of tickets</li>
+                    <li><strong>Task 2:</strong> Better reporting and ticket hierarchy</li>
+                    <li><strong>Task 3:</strong> Automation so managers don’t have to spend as much time to get the benefit</li>
+                </ul>
+
             </div>
-        </div>
+        </section>
+
+
+        <section class="intro" id="design" data-link-id="nav-item-2-red">
+            <h2 class="red shadow">Design Process</h2>
+
+            <div class="body-copy">
+
+                <strong class="green large" id="p-title">Task 1: High Quantity of Tickets</strong>
+                <p>
+                    I began by keeping the existing card design but updating them to accommodate the new, more detailed Class feedback. Hierarchy was brought into the ticket sorting, surfacing the negative tickets at the top so the Club Manager can quickly put out any fires.
+                </p>
+
+                <div class="ft-image">
+                    <img src="images/portal-2.png" />
+                    <div class="caption">
+                        Tickets were moved into two columns for faster scanning. Negative tickets and positive tickets with testimonials were given more weight so user can focus on resolving highest priority tasks. Issues: side by side tickets required too much cognitive load from users.
+                    </div>
+                </div>
+
+                <div class="ft-image">
+                    <img src="images/portal-3.png" />
+                    <div class="caption">
+                        Details can be surfaced one ticket at a time, providing more focus when necessary but allowing the user to quickly scroll through the high level.
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+        </section>
+
+
+
+
     </div>
 </section>
 
