feedback style, mobile styling

--- a/casestudy-adminportal.html
+++ b/casestudy-adminportal.html
@@ -48,9 +48,9 @@
 
     <section class="case-nav lt-gray-background blue">
         <ul class="case-nav-content" id="adminportal-nav">
-            <li><a href="#" id="nav-item-1-red" class="active">Intro</a></li>
-            <li><a href="#" id="nav-item-2-red">Design Process</a></li>
-            <li><a href="#" id="nav-item-3-red">Final Design</a></li>
+            <li><a href="#intro" id="nav-item-1-red" class="active-red">Intro</a></li>
+            <li><a href="#design" id="nav-item-2-red">Design Process</a></li>
+            <li><a href="#final-design" id="nav-item-3-red">Final Design</a></li>
         </ul>
     </section>
 
@@ -65,16 +65,16 @@
     </section> -->
 
 <section class="case-study">
-    <div class="case-study-content">
+    <div class="case-study-content" id="center">
         <section class="intro" id="intro" data-link-id="nav-item-1-red">
+        <div class="body-copy">
             <h2 class="red shadow">Intro</h2>
                 
                 <div class="side-image" id="admin">
                     <img src="images/logos.png" id="logos" />
-                    <img src="images/dash1-0.png" id="phone" />
+                    <img src="images/feedback-phone.png" id="phone" />
                 </div>
 
-            <div class="body-copy">
 
                 <strong class="green large" id="p-title">Who is Netpulse?</strong>
                 <p>
@@ -137,17 +137,16 @@
             </div>
         </section>
 
-
         <section class="intro" id="design" data-link-id="nav-item-2-red">
+            <div class="body-copy">
             <h2 class="red shadow">Design Process</h2>
 
-            <div class="body-copy">
 
                 <strong class="green large" id="p-title">Task 1: High Quantity of Tickets</strong>
                 <p>
                     I began by keeping the existing card design but updating them to accommodate the new, more detailed Class feedback. Hierarchy was brought into the ticket sorting, surfacing the negative tickets at the top so the Club Manager can quickly put out any fires.
                 </p>
-
+            </div>
                 <div class="ft-image">
                     <img src="images/portal-2.png" />
                     <div class="caption">
@@ -162,6 +161,65 @@
                     </div>
                 </div>
 
+            <div class="body-copy">
+                <strong class="green large" id="p-title">Task 2: Better Reporting & Hierarchy</strong>
+                <p>
+                    The existing hierarchy of information was not great at providing the user with the right amount of information at the right time. I explored surfacing higher level reporting for chain admin who are interested in how their locations are doing but aren't dealing with individual tickets. I also explored various ways to sort the tickets themselves to empower the admin to deal with the most pressing issues quickly and without losing track of any feedback.
+                </p>
+            </div>
+                <div class="ft-image">
+                    <img src="images/portal-2.png" />
+                    <div class="caption">
+                        Tickets were moved into two columns for faster scanning. Negative tickets and positive tickets with testimonials were given more weight so user can focus on resolving highest priority tasks. Issues: side by side tickets required too much cognitive load from users.
+                    </div>
+                </div>
+
+                <div class="ft-image">
+                    <img src="images/portal-3.png" />
+                    <div class="caption">
+                        Details can be surfaced one ticket at a time, providing more focus when necessary but allowing the user to quickly scroll through the high level.
+                    </div>
+                </div>
+
+            <div class="body-copy">
+                <strong class="green large" id="p-title">Task 3: Automation</strong>
+                <p>
+                    The auto post 'web widget' is a new feature we created for the 2.0 MVP launch. While Feedback 1.0 helped club admin appease members before they churned, it didn't provide an adequate way to use testimonials to acquire new members. The web widget takes recent testimonials and outputs them into a lean JavaScript widget that can quickly and easily be added to any website. Timely feedback from actual members is far more powerful than the typical static testimonial section on marketing websites.
+                </p>
+            </div>
+                <div class="ft-image">
+                    <img src="images/portal-2.png" />
+                    <div class="caption">
+                        Tickets were moved into two columns for faster scanning. Negative tickets and positive tickets with testimonials were given more weight so user can focus on resolving highest priority tasks. Issues: side by side tickets required too much cognitive load from users.
+                    </div>
+                </div>
+
+                <div class="ft-image">
+                    <img src="images/portal-3.png" />
+                    <div class="caption">
+                        Details can be surfaced one ticket at a time, providing more focus when necessary but allowing the user to quickly scroll through the high level.
+                    </div>
+                </div>
+        </section>
+
+
+        <section class="intro" id="final-design" data-link-id="nav-item-3-red">
+            <div class="body-copy">
+            <h2 class="red shadow">Final Design</h2>
+
+
+                <strong class="green large" id="p-title">Lorem ipsum dolor sit amet</strong>
+                <p>
+                    I began by keeping the existing card design but updating them to accommodate the new, more detailed Class feedback. Hierarchy was brought into the ticket sorting, surfacing the negative tickets at the top so the Club Manager can quickly put out any fires.
+                </p>
+            </div>
+                <div class="ft-image">
+                    <img src="images/portal-2.png" />
+                    <div class="caption">
+                        Admin can quickly view feedback from all or individual club locations. The tickets use the same card design but are full width to provide faster scanning for the user and faster implementation for engineering. Tickets are sorted chronologically with comments surfaced and 'empty' ratings collapsed with an option to "Resolve All" empty positive tickets with a group email campaign. Admin can easily filter a day's tickets by category, especially important for admin who are only interested in one realm of the gym (ex: instructors). 
+                    </div>
+                </div>
+        </section>
 
 
 
