--- a/casestudy-dashboard.html
+++ b/casestudy-dashboard.html
@@ -65,6 +65,9 @@
                 <p>
                     Netpulse is the #1 mobile SaaS company in the <span class="red">fitness industry</span>, providing <span class="red">white labeled apps</span> to hundreds of brands around the world. From 24 Hour Fitness to your neighborhood's mom-and-pop facility, Netpulse creates effective B2B2C solutions to make the sometimes scary world of fitness a little more approachable for meatheads and newbies alike.
                 </p>
+                <div class="hidden-image">
+                    <img src="images/logos.png" id="logos" />
+                </div>
                 <div class="inline-link blue">My Role at Netpulse</div>
                 <div class="inline-link-active blue">My Role at Netpulse</div>
                 <div class="collapsed-text">
@@ -98,6 +101,9 @@
                 <p>
                     And while the dashboard plays such an important role in the app, it had not been rethought in years and was <span class="red">falling behind</span> as the rest of the platform grew around it.
                 </p>
+                <div class="hidden-image">
+                    <img src="images/dash1-0.png" id="phone" />
+                </div>
                 <strong class="green large" id="p-title">Dashboard 1.0</strong>
                 <ul>
                     <li>Visual Issues</li>
@@ -126,7 +132,7 @@
                 </ul>
             </div>
                 <div class="ft-image">
-                    <img src="images/ft-research1.png" />
+                    <img src="images/ft-research.png" />
                     <div class="caption">
                         I listed out all existing features and the main actions that take place within them. They were organized into tile vs side menu features and color coded by action type (settings, primary actions, live info, reference, and outliers).
                     </div>
@@ -160,11 +166,14 @@
             </div>
                 <div class="two-images">
                     <div class="ft-image">
-                        <img src="images/dash-design1.png">
-                        <img src="images/dash-design2.png" id="margin-top">
+                        <img src="images/dashboard-sketch1.png">
+                        <img src="images/dashboard-sketch2.png" id="margin-top">
                     </div>
                     <div class="side-image large">
-                        <img src="images/dash1-0.png" id="large-phone" />
+                        <div class="phone-overlay">
+                            <img class="phone-body" src="images/phone.png" id="testing-phone2" />
+                            <img class="phone-screen" src="images/dashboard-sketches.gif" />
+                        </div>
                     </div>
                 </div>
                 <div class="caption">
@@ -225,8 +234,11 @@
                 
 
                     <div class="side-image">
-                        <img src="images/testing-phone1.png" id="testing-phone1" />
-                        <img src="images/testing-phone2.png" id="testing-phone2" />
+                        <img src="images/dashboard-variations.gif" id="testing-phone1" />
+                        <div class="phone-overlay">
+                            <img class="phone-body" src="images/phone.png" id="testing-phone2" />
+                            <img class="phone-screen" src="images/dashboard-prototype.gif" />
+                        </div>
                     </div>
             </section>
 
