--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 			<h5 class="blue">A Conversational Experience</h5>
 			<h7 class="red">Content  •  UX  •  UI  •  Development</h7>
 			<div class="button-static">
-				<a href="casestudy-suthbot.html" class="button-static-content">Coming Soon!</a>
+				<a href="" class="button-static-content">Coming Soon!</a>
 				<div class="shadow-hack"></div>
 			</div>
 		</div>
-			<img src="images/suthbot-featureimage.png" />
+			<img class="home-feature" src="images/suthbot-featureimage.png" />
 	</div>
 
 	<div class="dashboard">
@@ -79,7 +79,7 @@
 				<div class="shadow-hack"></div>
 			</div>
 		</div>
-			<img src="images/dashboard-featureimage.png" />
+			<img class="home-feature" src="images/dashboard-featureimage.png" />
 	</div>
 
 
@@ -89,11 +89,11 @@
 			<h5 class="white">Feedback Ticket Dashboard</h5>
 			<h7 class="blue">UX  •  UI  •  Research  •  Development</h7> 
 			<div class="button">
-				<a href="" class="button">See Case Study <img src="images/plus.svg" /></a>
+				<a href="casestudy-adminportal.html" class="button">See Case Study <img src="images/plus.svg" /></a>
 				<div class="shadow-hack"></div>
 			</div>
 		</div>
-			<img src="images/adminportal-featureimage.png" />
+			<img class="home-feature" src="images/adminportal-featureimage.png" />
 	</div>
 
 </section>
@@ -103,8 +103,8 @@
 		<h2 class="green shadow">Other Projects</h2>
 		<div class="thumbnails">
 			<div class="gradient"></div>
-			<div class="project-thumbnail" id="ui-library"><a href="https://www.behance.net/gallery/53294179/Netpulse-iOS-UI-Library" target="blank" id="uilib"></a>UI Library</div>
 			<div class="project-thumbnail" id="scout"><a href="https://www.behance.net/gallery/26133475/Scout-Northeasterns-Student-led-Design-Studio" id="scout" target="blank"></a>Scout</div>
+			<div class="project-thumbnail" id="ui-library"><a href="https://www.behance.net/gallery/53294179/Netpulse-iOS-UI-Library" target="blank" id="uilib"></a>UI Library</div>
 			<div class="project-thumbnail" id="netpulse-website"><a href="http://www.netpulse.com/" target="blank" id="netpulse"></a>Netpulse<br>.com</div>
 			<div class="project-thumbnail" id="sametz"><a href="https://www.behance.net/gallery/26133353/Olin-College-Capabilities-Brochure" id="sametz" target="blank"></a>Sametz</div>
 			<div class="project-thumbnail" id="ancestory">Ancestory</div>
