--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
 
+    <script src="https://use.typekit.net/gxz8pvo.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   </head>
 
 <body>
@@ -43,7 +46,9 @@
 		<div class="content">
 			<h2 class="red shadow">Hello, I'm Abbie.</h2>
 			<div class="body-copy">
-				<span class="italic-subhead">That's me in a turkey hat</span>
+				<span class="italic-subhead"><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+    <path fill="#4a4a4a" d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"></path>
+</svg>That's me in a turkey hat</span>
 				<br/><br/><br/>
 				I’m a digital product designer with a background in visual design and design management currently living the dream in San Francisco. I prefer to dwell in the details but not at the expense of the big picture.
 				<br><br>
