--- a/casestudy-suthbot.html
+++ b/casestudy-suthbot.html
@@ -28,6 +28,9 @@
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
 
+    <script src="https://use.typekit.net/gxz8pvo.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   </head>
 
 <body>
