mobile styling fixes

--- a/casestudy-adminportal.html
+++ b/casestudy-adminportal.html
@@ -14,7 +14,7 @@
     <!-- Meta tags -->
     <meta name="description" content="Abbie Hanright Design focuses on digital product design for mobile and web but brings a background of visual design and design management.">
     <meta name="keywords" content="abbie hanright, hanright, design, product design, designer, ui, ux, product designer, san francisco, mobile, web, print, branding, strategy">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.rem.css">
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Abbie Hanright Design">
     <meta property="og:site_name" content="Abbie Hanright Design">
     <meta property="og:description" content="Abbie Hanright Design focuses on digital product design for mobile and web but brings a background of visual design and design management">
-    <!-- <meta property="og:image" content="http://www.netpulse.com/img/open-graph.png"> -->
+    <meta property="og:image" content="http://www.netpulse.com/img/open-graph.png">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
@@ -52,7 +52,7 @@
     <section class="case-nav lt-gray-background blue">
         <ul class="case-nav-content" id="adminportal-nav">
             <li><a href="#intro" id="nav-item-1-red" class="active">Intro</a></li>
-            <li><a href="#design" id="nav-item-2-red">Design Process</a></li>
+            <li class="last"><a href="#design" id="nav-item-2-red">Design Process</a></li>
             <li><a href="#final-design" id="nav-item-3-red">Final Design</a></li>
         </ul>
     </section>
@@ -133,7 +133,7 @@
         <section class="intro" id="design" data-link-id="nav-item-2-red">
             <h2 class="red shadow">Design Process</h2>
             <div class="body-copy">
-                <strong class="green large" id="p-title">Task 1: High Quantity of Tickets</strong>
+                <strong class="green large" id="p-title">Task 1: Deal with a High Quantity of Tickets</strong>
                 <p>
                     I began by keeping the existing card design but updating them to accommodate the new, more detailed Class feedback. Hierarchy was brought into the ticket sorting, surfacing the negative tickets at the top so the Club Manager can quickly put out any fires.
                 </p>
@@ -229,7 +229,7 @@
             <div class="shadow-hack"></div>
         </div>
     </div>
-        <img src="images/dashboard-featureimage.png" />
+        <img src="images/dashboard-featureimage.png" class="next-case" />
 </div>
 
 
