--- a/casestudy-dashboard.html
+++ b/casestudy-dashboard.html
@@ -1,4 +1,4 @@
-<head>
+ <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,7 +14,7 @@
     <!-- Meta tags -->
     <meta name="description" content="Abbie Hanright Design focuses on digital product design for mobile and web but brings a background of visual design and design management.">
     <meta name="keywords" content="abbie hanright, hanright, design, product design, designer, ui, ux, product designer, san francisco, mobile, web, print, branding, strategy">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.rem.css">
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Abbie Hanright Design">
     <meta property="og:site_name" content="Abbie Hanright Design">
     <meta property="og:description" content="Abbie Hanright Design focuses on digital product design for mobile and web but brings a background of visual design and design management">
-    <!-- <meta property="og:image" content="http://www.netpulse.com/img/open-graph.png"> -->
+    <meta property="og:image" content="http://www.netpulse.com/img/open-graph.png">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
@@ -53,7 +53,7 @@
         <ul class="case-nav-content" id="dashboard-nav">
             <li><a href="#" id="nav-item-1" class="active">Intro</a></li>
             <li><a href="#" id="nav-item-2">Research</a></li>
-            <li><a href="#" id="nav-item-3">Design</a></li>
+            <li class="last"><a href="#" id="nav-item-3">Design</a></li>
             <li><a href="#" id="nav-item-4">Testing</a></li>
             <li><a href="#" id="nav-item-5">Revision</a></li>
         </ul>
